src/app/features/shared/form-controls/controls/text-control/text-control.component.scss
:host {
  display: block;
  width: 100%;
}

.form-field {
  $self: &;
  margin: 1rem 0;
  padding: 1rem 0 1.5rem;
  position: relative;
  width: 100%;

  &__label {
    position: absolute;
    left: 1rem;
    bottom: calc(100% - 1rem);
    font-size: 0.8em;
    font-weight: 700;
    letter-spacing: 0.2rem;
    color: var(--text-color);
    transition: 0.2s;

    &:first-letter {
      text-transform: uppercase;
    }
  }

  &__input {
    padding: 0.5rem 1rem;
    width: 100%;
    background-color: transparent;
    border: none;
    border-bottom: 1px solid var(--text-color);
    color: var(--text-color);

    &:focus {
      outline: none;
    }
  }

  &__error-message {
    position: absolute;
    left: 1rem;
    top: calc(100% - 1.3rem);
    font-size: 0.8em;
    font-weight: 600;
    color: var(--error-color);
  }
}

